<<<<<<< Updated upstream
[gd_scene load_steps=2 format=3 uid="uid://bw0mjnwkmqtkm"]

[ext_resource type="Script" uid="uid://gxk7m6hd04gg" path="res://ui/menus/volume_slider.gd" id="1_rkgfh"]
=======
[gd_scene load_steps=2 format=3 uid="uid://b8d0avf1gl2kn"]

[ext_resource type="Script" uid="uid://d1r2ed8mxx1g0" path="res://ui/menus/volume_slider.gd" id="1_rkgfh"]
>>>>>>> Stashed changes

[node name="HBoxContainer" type="HBoxContainer"]
script = ExtResource("1_rkgfh")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Name"

[node name="VolumeSlider" type="HSlider" parent="."]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.001
ticks_on_borders = true

[connection signal="value_changed" from="VolumeSlider" to="." method="_on_volume_slider_value_changed"]
